AUGREL/src/objects/Form_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreationDate__c</fullName>
        <label>CreationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Device_Name__c</fullName>
        <label>Device Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatch_Name__c</fullName>
        <label>Dispatch Name</label>
        <picklist>
            <picklistValues>
                <fullName>Print Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Effective_State_Code__c</fullName>
        <label>Effective State Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Number__c</fullName>
        <label>Form Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Type__c</fullName>
        <label>Form Type</label>
        <picklist>
            <picklistValues>
                <fullName>Automated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <label>Recipient</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestID__c</fullName>
        <label>RequestID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystem__c</fullName>
        <label>SourceSystem</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatementYear__c</fullName>
        <label>StatementYear</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_System__c</fullName>
        <label>Target System</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Form Request</label>
    <nameField>
        <displayFormat>FR-{00000}</displayFormat>
        <label>Form Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>